--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-###############################################################################
-#                          Generated on phpdocker.io                          #
-###############################################################################
 version: '3.1'
 services:
     mailhog:
@@ -11,11 +8,11 @@ services:
     redis:
         image: 'redis:alpine'
 
-    mariadb:
-        image: 'mariadb:11.0'
+    percona:
+        image: 'percona:latest'
         working_dir: /var/www/laravel
         volumes:
-            - db_data:/var/lib/mysql
+            - db_data:/var/lib/percona
         environment:
             - MYSQL_ROOT_PASSWORD=password
             - MYSQL_DATABASE=news
@@ -44,7 +41,7 @@ services:
             - '.:/var/www/laravel'
             - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.2/fpm/conf.d/99-overrides.ini'
         depends_on:
-            - mariadb
+            - percona
         links:
             - redis:redis
 volumes:
